k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: links-page
  namespace: links
spec:
  selector:
    app: links-page
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
